minikube/deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy-hello
  namespace: dev
  labels:
    tier: backend
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scrape: "true"   
spec:
  selector:
    matchLabels:
      app: app-hello
      tier: backend
  replicas: 2
  template:
    metadata:
      namespace: dev
      labels:
        app: app-hello
        tier: backend
      annotations:
        prometheus.io/port: "9216"
        prometheus.io/scrape: "true"          
    spec:        
      containers:
      - name: app-hello
        image: echobuild:dev0.1
        ports:
          - containerPort: 8080
            name: "http-server"            
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "500m"         
        livenessProbe:
          httpGet:
            path: /liveness
            port: 8080
          initialDelaySeconds: 15
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /readiness
            port: 8080
          initialDelaySeconds: 0
          timeoutSeconds: 1
