minikube/service-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: lb-hello
  namespace: dev
  labels:
    app: app-hello
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    targetPort: http-server
    port: 8080
  selector:
    app: app-hello
    tier: backend
