minikube/service-node-port.yml
apiVersion: v1
kind: Service
metadata:
  name: node-port-hello
  namespace: dev
  labels:
    app: app-hello
    tier: backend
spec:
  type: NodePort
  ports:
  - protocol: TCP
    targetPort: http-server
    port: 8080
    nodePort: 30000
  selector:
    app: app-hello
    tier: backend
