minikube/ingress.yml
apiVersion: v1
kind: Service
metadata:
  name: lb-ingress-hello
  namespace: dev
  labels:
    app: app-hello
    tier: backend
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    targetPort: http-server
    port: 80
  selector:
    app: app-hello
    tier: backend           

---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-hello
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app.internal.io
    http:
      paths:
      - path: /
        backend:
          serviceName: lb-hello
          servicePort: 8080
  - host: app.internal.io
    http:
      paths:
      - path: /v2
        backend:
          serviceName: lb-ingress-hello
          servicePort: 80
